# tailwind_htpy_scanner

./: .coverage  README.md  pyproject.toml
src/: test_tailwind_htpy_scanner.py
src/tailwind_htpy_scanner/: __init__.py  main.py
