[project]
name = "tailwind_htpy_scanner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Max Caldwell", email = "max@scriptt.ai" }]
requires-python = ">=3.12"
dependencies = [
    "pytest>=8.3.4",
    "watchdog>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
